--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
   <name>petclinic</name>
 
   <properties>
+    <!-- SonarQube server URL -->
+        <sonar.host.url>https://sonarcloud.io/</sonar.host.url>
+              <sonar.projectKey>chandua_chandua</sonar.projectKey>
+        <!-- Organization key (if applicable) -->
+        <sonar.organization>chandua</sonar.organization>
 
     <!-- Generic properties -->
     <java.version>11</java.version>
