--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <properties>
     <!-- SonarQube server URL -->
-        <sonar.host.url>https://sonarcloud.io/</sonar.host.url>
+        <sonar.host.url>https://sonarcloud.io//</sonar.host.url>
               <sonar.projectKey>chandua_chandua</sonar.projectKey>
         <!-- Organization key (if applicable) -->
         <sonar.organization>chandua</sonar.organization>
