--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
   <properties>
     <!-- SonarQube server URL -->
         <sonar.host.url>https://sonarcloud.io//</sonar.host.url>
-              <sonar.projectKey>chandua_chandua</sonar.projectKey>
+              <sonar.projectKey>chanduc_chanduc</sonar.projectKey>
         <!-- Organization key (if applicable) -->
-        <sonar.organization>chandua</sonar.organization>
+        <sonar.organization>chanduc</sonar.organization>
 
     <!-- Generic properties -->
     <java.version>11</java.version>
