--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     
    <!-- SonarQube server URL -->
-http://your-sonarqube-server-url:9000</sonar.host.url>
+  <sonar.host.url>http://your-sonarqube-server-url:9000</sonar.host.url>
 <!-- SonarQube authentication token or username/password -->
 <sonar.login>4e4a56c16a33409e1e74a375150f210a832184d1</sonar.login>
 <!-- Project key -->
